# taxi_demand_prediction

./: .env  pyproject.toml  pyproject_local.toml  requirements-monitoring.txt  requirements.txt  taxi_upload.py
.github/workflows/: feature_pipelines.yml  inference_pipeline.yml  training_pipeline.yml
data/: monitoring_metrics.csv
data/transformed/: ts_data_2022_01.parquet
models/: feature_schema.parquet  model.pkl  taxi_demand_predictor_next_hour_v1.pkl
notebooks/: 10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb  1_load_and_validate_raw_data.ipynb  2_transform_raw_data_into_ts_data.ipynb  3_transform_ts_data_into_features_and_targets.ipynb  4_transform_raw_data_into_features.ipynb  5_visualize_training_data.ipynb  6_baseline_model.ipynb  7_xgboost_model.ipynb  8_lightgbm_model.ipynb  9_lightgbm_model_with_feature_engineering.ipynb
src/: config.py  custom_logging.py  data.py  data_split.py  debug_fg.py  feature_metadata.py  feature_store_api.py  features.py  frontend.py  frontend_monitoring.py  inference.py  ingest.py  log_predictions.py  model.py  monitoring.py  settings.py  test.py  test_features.py  train.py  utils.py
