[project]
name = "taxi-demand"
version = "0.1.0"
description = "Taxi demand prediction and monitoring"
readme = "README.md"
authors = [
    { name = "talha-naeem", email = "naeemt970@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.39.0",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.2"
]

[project.scripts]
taxi-demand = "taxi_demand:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
